hello/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello
  labels:
    app: hello
spec:
  selector:
    app: hello
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
